fix(leaderboard mobile responsiveness): Fixed the loaderboard overflowing on mobile

--- a/frontend/src/styles/leaderboard.css
+++ b/frontend/src/styles/leaderboard.css
@@ -6,6 +6,7 @@
   color: #333;
   display: flex;
   flex-direction: column;
+  max-width: fit-content;
 }
 
 .leaderboard-header h2 {
@@ -97,7 +98,7 @@
 td code {
   font-family: monospace;
   font-size: 12px;
-  color: white;
+  color: black;
   background: #c9c6c6;
   padding: 2px 6px;
   border-radius: 6px;
@@ -234,7 +235,7 @@ td code {
 }
 
 .btn {
-  font-size: 10px;
+  font-size: 15px;
 }
 
 /* If you want a ghost/outline version that still uses the wits blue */
@@ -256,10 +257,6 @@ td code {
   align-items: center;
   gap: 24px;
   padding: 20px;
-}
-
-div {
-  color: white !important;
 }
 
 .private-action {
